public/assets/css/main.css
html {
  height: 100%;
  position: relative
}

body {
  background-color: #f39c12;
  font-family: "Lato", sans-serif;
  color: white
}

li.new-item {
  -webkit-transform-origin: 0% 50%;
  -ms-transform-origin: 50% 0%;
  -o-transform-origin: 50% 0%;
  transform-origin: 0% 50%;
  -webkit-animation: new-item-animation .5s ease backwards;
  -o-animation: new-item-animation .5s ease backwards;
  animation: new-item-animation .5s ease backwards;
}

@keyframes fadeIn {
  to {
    opacity: 1
  }
}

@keyframes new-item-animation {
  from {
    opacity: 0;
    -webkit-transform: translateY(-600px);
    -ms-transform: translateY(-600px);
    -o-transform: translateY(-600px);
    transform: translateY(-600px);

  }

  to {
    opacity: 1;
    transform: translateY(0)
  }
}

@-webkit-keyframes fadeIn {
  to {
    opacity: 1
  }
}

@-o-keyframes fadeIn {
  to {
    opacity: 1
  }
}

@-webkit-keyframes new-item-animation {
  from {
    opacity: 0;
    -webkit-transform: translateY(-600px);
    transform: translateY(-600px);
  }

  to {
    opacity: 1;
    transform: translateY(0)
  }
}

@-o-keyframes new-item-animation {
  from {
    opacity: 0;
    -o-transform: translateY(-400px);
    transform: translateY(-400px)
  }

  to {
    opacity: 1;
    transform: translateY(0)
  }
}

@-webkit-keyframes openspace {
  to {
    height: auto
  }
}

@-o-keyframes openspace {
  to {
    height: auto
  }
}

li.item {
  list-style: none;
  background-color: #3e8f3e;
  display: inline-block;
  /*-webkit-transform: scaleY(-1);
  transform: scaleY(-1);*/
  height: 60px;
  border: 1px solid #ccc;
  padding: 10px;
  margin: 5px;
  align-items: center;
}

li.item:nth-child(even) {
  background-color: #2B95A3;
}

li.item.ui-sortable-helper {
  background-color: #a31417;
}

.holder {
  margin-top: 500px;
  min-width: 100%;
}

#item-basket {
  display: -webkit-flexbox;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
  text-align: center;

  justify-content: center;
  flex-wrap: wrap-reverse;
  flex-direction: row-reverse;
}


[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}

